RESOLVED FIXED209454
[WinCairo][PlayStation] Failure to build with ENABLE_XSLT=OFF
https://bugs.webkit.org/show_bug.cgi?id=209454
Summary [WinCairo][PlayStation] Failure to build with ENABLE_XSLT=OFF
Stephan Szabo
Reported 2020-03-23 17:32:44 PDT
Turning off ENABLE_XSLT on wincairo or playstation lead to a failure: D:\github\webkit\Source\WebCore\xml/parser/XMLDocumentParserLibxml2.cpp(476): error C2027: use of undefined type 'WebCore::PageConsoleClient' Wincairo built successfully with ENABLE_XSLT turned on.
Attachments
Patch (1.13 KB, patch)
2020-03-23 17:35 PDT, Stephan Szabo
no flags
Stephan Szabo
Comment 1 2020-03-23 17:35:51 PDT
EWS
Comment 2 2020-03-23 21:51:39 PDT
Committed r258907: <https://trac.webkit.org/changeset/258907> All reviewed patches have been landed. Closing bug and clearing flags on attachment 394331 [details].
Radar WebKit Bug Importer
Comment 3 2020-03-23 21:52:15 PDT
Note You need to log in before you can comment on or make changes to this bug.