[WinCairo][PlayStation] Failure to build with ENABLE_XSLT=OFF https://bugs.webkit.org/show_bug.cgi?id=209454

Reviewed by Ross Kirsling.

No new tests, build fix.

* xml/parser/XMLDocumentParserLibxml2.cpp:


Canonical link: https://commits.webkit.org/222401@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258907 268f45cc-cd09-0410-ab3c-d52691b4dbfc